typescript/checker/tests/conformance/es6/arrowFunction/emitArrowFunctionWhenUsingArguments09.ts.stderr
error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            152,
        ),
        hi: BytePos(
            161,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/es6/arrowFunction/emitArrowFunctionWhenUsingArguments09.ts:4:25
  |
4 |     var a = () => () => arguments;
  |                         ^^^^^^^^^

